--- a/cake-shop-web/src/components/AppBottomBar/style.scss
+++ b/cake-shop-web/src/components/AppBottomBar/style.scss
@@ -1,3 +1,7 @@
-.am-tab-bar::-webkit-scrollbar {
-  display: none;
+.app-bottom-bar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 10;
+  width: 100vw;
 }
