--- a/cake-shop-web/src/index.css
+++ b/cake-shop-web/src/index.css
@@ -1,23 +1,19 @@
-:root {
-  font-size: 62.5%;
-}
-
 html,
 body {
   height: 100%;
   box-sizing: border-box;
   background-color: #f5f5f5;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-    'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+  -moz-osx-font-smoothing: grayscale; }
 
 *,
 *::before,
 *::after {
   box-sizing: inherit;
   margin: 0;
-  padding: 0;
-}
+  padding: 0; }
+
+::-webkit-scrollbar {
+  display: none; }
