--- a/cake-shop-web/src/pages/Home/style.css
+++ b/cake-shop-web/src/pages/Home/style.css
@@ -1,2 +1,13 @@
 .app-home {
-  height: 100%; }
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+  max-height: calc(100vh - 50px);
+  -webkit-overflow-scrolling: touch; }
+  .app-home .space-carousel {
+    padding: 18px 0;
+    background: #fff;
+    overflow: hidden; }
+  .app-home .img-holder {
+    height: 150px;
+    background-color: yellowgreen; }
