--- a/cake-shop-web/src/pages/Home/style.scss
+++ b/cake-shop-web/src/pages/Home/style.scss
@@ -1,3 +1,16 @@
 .app-home {
   height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+  max-height: calc(100vh - 50px);
+  -webkit-overflow-scrolling: touch;
+  .space-carousel {
+    padding: 18px 0;
+    background: #fff;
+    overflow: hidden;
+  }
+  .img-holder {
+    height: 150px;
+    background-color: yellowgreen;
+  }
 }
