--- a/cake-shop-admin/src/layouts/Dashboard/style.css
+++ b/cake-shop-admin/src/layouts/Dashboard/style.css
@@ -1,16 +1,48 @@
 .dashboard {
   width: 100vw;
-  height: 100vh;
-  color: #333; }
+  height: 100vh; }
   .dashboard__logo {
-    height: 32px;
-    background: rgba(255, 255, 255, 0.2);
-    margin: 16px; }
+    color: #fff;
+    font-size: 1.8rem;
+    padding-left: 28px;
+    height: 64px;
+    line-height: 64px;
+    overflow: hidden;
+    background-color: #002140; }
+    .dashboard__logo .logo {
+      padding-right: 12px; }
+    .dashboard__logo .title {
+      font-weight: 500; }
+  .dashboard__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0;
+    padding-right: 12px;
+    background-color: #fff; }
   .dashboard__trigger {
     font-size: 18px;
     line-height: 64px;
     padding: 0 24px;
     cursor: pointer;
-    transition: color 0.3s; }
+    transition: background-color 0.3s; }
     .dashboard__trigger:hover {
-      color: #1890ff; }
+      background-color: #e6f7ff; }
+  .dashboard__actions {
+    display: flex;
+    justify-items: flex-start;
+    align-items: flex-start;
+    height: 100%; }
+  .dashboard__action {
+    height: 100%;
+    cursor: pointer;
+    padding: 0 12px; }
+    .dashboard__action:hover {
+      background-color: #e6f7ff; }
+  .dashboard__avatar {
+    background-color: #f56a00; }
+  .dashboard__username {
+    padding-left: 12px; }
+  .dashboard__content {
+    margin: 12px;
+    padding: 12px; }
