--- a/cake-shop-admin/src/layouts/Admin/style.scss
+++ b/cake-shop-admin/src/layouts/Admin/style.scss
@@ -1,6 +1,11 @@
 .dashboard {
   width: 100vw;
   height: 100vh;
+  &__sider {
+    max-height: 100vh;
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
   &__logo {
     color: #fff;
     font-size: 1.8rem;
@@ -8,7 +13,6 @@
     height: 64px;
     line-height: 64px;
     overflow: hidden;
-    background-color: #002140;
     .logo {
       padding-right: 12px;
     }
