--- a/cake-shop-admin/src/layouts/Admin/style.scss
+++ b/cake-shop-admin/src/layouts/Admin/style.scss
@@ -13,6 +13,7 @@
     height: 64px;
     line-height: 64px;
     overflow: hidden;
+    background-color: #002140;
     .logo {
       padding-right: 12px;
     }
