--- a/cake-shop-admin/src/layouts/Account/style.css
+++ b/cake-shop-admin/src/layouts/Account/style.css
@@ -1,5 +1,6 @@
 .account {
-  height: 100vh; }
+  height: 100%;
+  min-height: 100vh; }
   .account__content {
     margin-top: 100px; }
   .account__title {
