--- a/cake-shop-admin/src/pages/account.css
+++ b/cake-shop-admin/src/pages/account.css
@@ -5,13 +5,17 @@
     margin-top: 100px; }
   .account__title {
     text-align: center; }
-  .account__tabs {
-    width: 450px;
+  .account__sub-title {
+    display: block;
     margin: 0 auto;
-    margin-top: 3rem;
+    text-align: center; }
+  .account__form {
+    width: 420px;
+    margin: 0 auto;
+    margin-top: 4rem;
     padding: 32px;
     background: #fff;
-    border-radius: 2px;
+    border-radius: 4px;
     box-shadow: 0 0 1px 0 rgba(0, 0, 0, 0.15); }
   .account__footer {
     text-align: center; }
