--- a/cake-shop-web/src/pages/Home/style.scss
+++ b/cake-shop-web/src/pages/Home/style.scss
@@ -4,13 +4,31 @@
   overflow-y: auto;
   max-height: calc(100vh - 50px);
   -webkit-overflow-scrolling: touch;
-  .space-carousel {
+  .top-products {
     padding: 18px 0;
     background: #fff;
     overflow: hidden;
-  }
-  .img-holder {
-    height: 150px;
-    background-color: yellowgreen;
+    &__item {
+      position: relative;
+    }
+    &__img {
+      width: 100%;
+      height: 240px;
+    }
+    &__name {
+      position: absolute;
+      bottom: 4px;
+      left: 0;
+      display: block;
+      width: 100%;
+      padding: 4px 0;
+      text-align: center;
+      color: #fff;
+      background-color: rgba($color: #000000, $alpha: 0.15);
+    }
+    &__img-holder {
+      height: 150px;
+      background-color: yellowgreen;
+    }
   }
 }
