--- a/cake-shop-web/src/index.css
+++ b/cake-shop-web/src/index.css
@@ -1,3 +1,6 @@
+:root {
+  font-size: 62.5%; }
+
 html,
 body {
   height: 100%;
@@ -17,3 +20,10 @@ body {
 
 ::-webkit-scrollbar {
   display: none; }
+
+.icon {
+  width: 1em;
+  height: 1em;
+  vertical-align: -0.15em;
+  fill: currentColor;
+  overflow: hidden; }
