--- a/cake-shop-web/src/index.scss
+++ b/cake-shop-web/src/index.scss
@@ -1,3 +1,7 @@
+:root {
+  font-size: 62.5%;
+}
+
 html,
 body {
   height: 100%;
@@ -20,4 +24,12 @@ body {
 
 ::-webkit-scrollbar {
   display: none;
+}
+
+.icon {
+  width: 1em;
+  height: 1em;
+  vertical-align: -0.15em;
+  fill: currentColor;
+  overflow: hidden;
 }
