--- a/cake-shop-web/src/pages/Home/style.css
+++ b/cake-shop-web/src/pages/Home/style.css
@@ -4,20 +4,22 @@
   overflow-y: auto;
   max-height: calc(100vh - 50px);
   -webkit-overflow-scrolling: touch; }
+  .app-home__navbar {
+    border-bottom: 1px solid #eee; }
   .app-home .top-products {
-    padding: 18px 0;
-    background: #fff;
-    min-height: 280px;
+    margin-top: 1rem;
+    min-height: 200px;
     overflow: hidden; }
     .app-home .top-products__item {
-      position: relative; }
+      position: relative;
+      background-color: #fff; }
     .app-home .top-products__img {
       width: 100%;
-      height: 240px; }
+      height: 260px; }
     .app-home .top-products__name {
       position: absolute;
-      bottom: 4px;
       left: 0;
+      bottom: 1px;
       display: block;
       width: 100%;
       padding: 4px 0;
@@ -27,7 +29,9 @@
     .app-home .top-products__img-holder {
       height: 150px;
       background-color: yellowgreen; }
-  .app-home .category-grid {
-    margin-top: 12px; }
+  .app-home__category-grid {
+    margin-top: 1rem; }
+    .app-home__category-grid .am-grid-icon {
+      height: 25px; }
   .app-home .recommend-list {
-    margin-top: 12px; }
+    margin-top: 1rem; }
