--- a/cake-shop-web/src/pages/Cart/style.css
+++ b/cake-shop-web/src/pages/Cart/style.css
@@ -9,7 +9,10 @@
   -webkit-overflow-scrolling: touch; }
   .app-cart__items {
     flex: 1;
-    min-height: calc(100vh - 139px); }
+    min-height: calc(100vh - 139px);
+    max-height: calc(100vh - 139px);
+    overflow-x: hidden;
+    overflow-y: auto; }
     .app-cart__items .cart-item {
       display: flex;
       justify-content: space-between;
@@ -23,7 +26,12 @@
     background-color: #fff;
     border-top: 1px solid #eee; }
     .app-cart__checkout .checkout-total {
-      flex: 1; }
+      flex: 1;
+      color: #666; }
+      .app-cart__checkout .checkout-total .total-money {
+        font-weight: bold;
+        font-size: 2rem;
+        color: orange; }
     .app-cart__checkout .checkout-button {
       width: 100px;
       text-align: center;
