--- a/cake-shop-web/src/pages/Cart/style.scss
+++ b/cake-shop-web/src/pages/Cart/style.scss
@@ -10,6 +10,9 @@
   &__items {
     flex: 1;
     min-height: calc(100vh - 139px);
+    max-height: calc(100vh - 139px);
+    overflow-x: hidden;
+    overflow-y: auto;
     .cart-item {
       display: flex;
       justify-content: space-between;
@@ -26,6 +29,12 @@
     border-top: 1px solid #eee;
     .checkout-total {
       flex: 1;
+      color: #666;
+      .total-money {
+        font-weight: bold;
+        font-size: 2rem;
+        color: orange;
+      }
     }
     .checkout-button {
       width: 100px;
